set(CMAKE_CXX_STANDARD 17)

function(add_ygm_example example_name)
    message(STATUS "YGM_INCLUDE_DIR: ${YGM_INCLUDE_DIR}")
    add_example(${example_name})
    # target_include_directories(${example_name} PUBLIC ${cereal_INCLUDE_DIR})
    # target_include_directories(${example_name} PUBLIC ${YGM_INCLUDE_DIR})
    # target_include_directories(${example_name} PUBLIC ${MPI_INCLUDE_PATH})
    target_link_libraries(${example_name} PUBLIC MPI::MPI_CXX)
    target_link_libraries(${example_name} PUBLIC cereal)
    target_link_libraries(${example_name} PUBLIC Threads::Threads)
    if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
        target_link_libraries(${example_name} PUBLIC rt)
    endif ()
    target_link_libraries(${example_name} PUBLIC ygm::ygm)
endfunction()

if (MPI_CXX_FOUND)
    add_ygm_example(ygm_wordcount)
    add_ygm_example(ygm_top_k_words)
    add_ygm_example(ygm_noop)
else()
    message(STATUS "Will skip building the YGM examples")
endif()
